Contact link to main ORG site openrightsgroup/blocked-org-uk#19

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -86,6 +86,6 @@
 ) else ''}}" href="/blocked-sites">Blocked Sites</a>
 <a class="{{ 'active' if request.path == '/about' else ''}}" href="/about">About</a>
 <a class="{{ 'active' if request.path == '/support' else ''}}" href="/support">Support</a>
-<a class="{{ 'active' if request.path == '/contact' else ''}}" href="/contact">Contact</a>
+<a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
 
 {% endmacro %}
