add privacy policy link

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -17,6 +17,7 @@
     <input type="submit" class="btn btn-primary" value="Sign up" />
   </span>
   </div>
+  <div><a href="https://www.openrightsgroup.org/privacy" target="_blank">Privacy Policy</a></div>
 </div>
 
 </form>
