--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -18,9 +18,28 @@
 
 {% block bodyrow2 %}
 <div class="row">
-<div class="col-md-12">
+<div class="col-md-8">
+  <h2>Incorrectly blocked sites reported to ISPs</h2>
+</div>
+<div class="col-md-4">
 
-<h2>Incorrectly blocked sites reported to ISPs</h2>
+<form class="form form-inline" method="POST" action="{{url_for('.reported_sites', method='POST')}}">
+    <div class="form-group">
+        <label for="isp">Filter by ISP: </label>
+        <select class="form-control" name="isp">
+            <option value="" {{ 'selected' if current_isp == None else ''}}>All ISPs</option>
+            {% for isp in config.ISPS %}
+            <option value="{{ isp }}" {{ 'selected' if isp==current_isp else ''}}>{{isp}}</option>
+            {% endfor %}
+        </select>
+        <input class="btn btn-default" type="submit" value="Update" />
+    </div>
+</form>
+
+</div>
+</div> <!-- /.row -->
+<div class="row">
+<div class="col-md-12">
 <table class="table table-striped">
     <tr>
         <th>URL</th>
@@ -30,7 +49,7 @@
     </tr>
     {% for row in reports %}
     <tr>
-        <td>{{ row.url }}</td>
+        <td><a href="{{ url_for('category.site', url=row.url) }}">{{ row.url }}</a></td>
         <td>{{ row.network_name }}</td>
         <td>{{ row.created | fmtime }}</td>
         <td>
