page and ISP checks

--- a/BlockedFrontend/templates/cms/reports.html
+++ b/BlockedFrontend/templates/cms/reports.html
@@ -18,10 +18,10 @@
 
 {% block bodyrow2 %}
 <div class="row">
-<div class="col-md-8">
+<div class="col-lg-8">
   <h2>Incorrectly blocked sites reported to ISPs</h2>
 </div>
-<div class="col-md-4">
+<div class="col-lg-4">
 
 <form class="form form-inline" method="POST" action="{{url_for('.reported_sites', method='POST')}}">
     <div class="form-group">
