fix stacking on bars

--- a/BlockedFrontend/templates/stats/stats.html
+++ b/BlockedFrontend/templates/stats/stats.html
@@ -55,7 +55,7 @@ $(document).ready(function(){
     options: {
         scales: {
             xAxes: [{
-                stacked: true
+                stacked: false
             }],
             yAxes: [{
                 stacked: true
@@ -81,7 +81,7 @@ $(document).ready(function(){
     options: {
       scales: {
         xAxes: [{
-          stacked: true
+          stacked: false
         }],
         yAxes: [{
           stacked: true
