--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -1,17 +1,14 @@
 {% extends "BasicPage.page.html" %}
-{% import "results.part.html" as results %}
+{%import "results.part.html" as results %}
+{%import "remotecontent.part.html" as rmt %}
 
 {%set pagetitle = "Websites being blocked by UK Internet Service Providers" %}
 
 
 {%block banner_text %}
-
-{% if 'banner_text' in remote_content %}
-{{ remote_content.banner_text | safe }}
-{% else %}
+{% call rmt.remote('banner_text') %}
 A great many websites are being blocked mistakenly as a result of government imposed filters used by Internet Service Providers.  We need your help to check and unblock these websites.  This is something anyone with a web browser can assist with.
-{% endif %}
-
+{% endcall %}
 {% endblock %}
 
 {% block body %}
