--- a/BlockedFrontend/templates/check.html
+++ b/BlockedFrontend/templates/check.html
@@ -28,7 +28,7 @@
 </div> <!-- /.row -->
 <div class="row">
 <div class="col-md-12">
-    {{ remote_content.TextAreaOne|replace('<table','<table class="table"') | safe }}
+    {{ g.remote_content.TextAreaOne|replace('<table','<table class="table"') | safe }}
 </div>
 </div>
 <div class="row shaded-row">
