--- a/BlockedFrontend/templates/cms/personal-stories.html
+++ b/BlockedFrontend/templates/cms/personal-stories.html
@@ -1,14 +1,15 @@
 {% extends "BasicPage.page.html" %}
+{%import "remotecontent.part.html" as rmt %}
 
-{% set pagetitle = remote_content.title %}
+{% set pagetitle = g.remote_content.title %}
 
 {% block banner_text %}
-{{ remote_content.banner_text|safe}}
+{{ g.remote_content.banner_text|safe}}
 {% endblock %}
 
 {% block body %}
 
-{{remote_content.mainContent|replace('"assets','"https://www.blocked.org.uk/assets')|safe}}
+{{g.remote_content.mainContent|replace('"assets','"https://www.blocked.org.uk/assets')|safe}}
 
 
 {{ chunks.contactForm() }}
