--- a/BlockedFrontend/templates/results.part.html
+++ b/BlockedFrontend/templates/results.part.html
@@ -5,10 +5,10 @@
 <tr>
   <td><h4>{{item.title|null('(no title)')}}</h4><div>{{item.url}}</div></td>
   <td class="reveal">
-    <a href="{{item.url}}" rel="nofollow" target="_blank">Visit Site</a>
-    <a href="{{ url_for('.site', url=item.url) }}">View site report</a>
+    <a class="reveal" href="{{item.url}}" rel="nofollow" target="_blank">Visit Site</a>
   </td>
   <td>
+  <a class="" href="{{ url_for('.site', url=item.url) }}">View site report</a>
   {% if item.last_reported is none %}
   <a class="btn btn-default" href="{{ url_for('unblock.unblock', url=item.url) }}">Request Unblock</a>
   {% else %}
