--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -124,23 +124,27 @@ margin-top: 2em;
     display: none;
 }
 
-#results * tr:hover td.reveal a {
-    display: inline-block;
+#results * tr td a {
+    padding-right: 0.75em;
     text-decoration: underline;
     text-transform: uppercase;
-    padding-right: 1em;
+}
+
+#results * tr:hover td.reveal a {
+    display: inline-block;
 
 }
 #results * td {
-    width: 40%;
+    width: 15%;
     vertical-align: middle;
     text-align: center;
     }
 #results * td:last-child {
-    width: 20%;
+    width: 40%;
     text-align: right;
     }
 #results * td:first-child {
+    width: 40%;
     text-align: left;
     }
 
