--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -4,6 +4,7 @@
 {%set pagetitle = g.remote_content.title | default("Take action against web censorship") %}
 {% set title_width = 12 %}
 {% set menu_block = false %}
+{% set banner_text_block = false %}
 
 {%block banner_text%}
 {%endblock%}
