Move assets from old site

--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -38,7 +38,7 @@ banner_text_block(bool): show banner text block, default true
 
     <div class="row menurow">
     <div class="col-md-5">
-        <a href="/" title="Return to homepage"><img width="100%" src="https://www.blocked.org.uk/assets/site/blocked/img/blocked-logo.svg" alt="Blocked logo" /></a>
+        <a href="/" title="Return to homepage"><img width="100%" src="/static/img/blocked-logo.svg" alt="Blocked logo" /></a>
     </div>
     <div class="col-md-7 menu">
       {{ chunks.main_menu() }}
