change sign up form to link to campaign site

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -4,23 +4,17 @@
 <div class="row {{rowClass}}">
 <div class="col-md-6">
 <h3>Stay informed</h3>
+</div>
+</div>
+<div class="row {{rowClass}}">
+<div class="col-md-6">
 
 <p>If you would like to stay informed about ORG's work in censorship, privacy, copyright reform and defending human rights and digital civil liberties, please sign up for our newsletter.</p>
 
-<form method="POST" action="/signup" class="form">
-
-<div class="form-group">
-  <label for="email">Email address</label>
-  <div class="input-group">
-  <input class="form-control" id="email" name="email" />
-  <span class="input-group-btn">
-    <input type="submit" class="btn btn-primary" value="Sign up" />
-  </span>
-  </div>
-  <div><a href="https://www.openrightsgroup.org/privacy" target="_blank">Privacy Policy</a></div>
 </div>
+<div class="col-md-6">
 
-</form>
+  <a class="btn btn-lg btn-primary" href="https://action.openrightsgroup.org/sign-up-for-org-email-updates">Sign up</a>
 
 </div>
 </div>
