add credits menu option

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -81,6 +81,7 @@
 ) else ''}}" href="/blocked-sites">Blocked Sites</a>
 <a class="{{ 'active' if request.path == '/about' else ''}}" href="/about">About</a>
 <a class="{{ 'active' if request.path == '/support' else ''}}" href="/support">Support</a>
+<a class="{{ 'active' if request.path == '/credits' else ''}}" href="/credits">Credits</a>
 <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
 
 {% endmacro %}
