add piwik tracking code: closes /openrightsgroup/blocked-org-uk#129

--- a/BlockedFrontend/templates/BasicPage.page.html
+++ b/BlockedFrontend/templates/BasicPage.page.html
@@ -33,6 +33,7 @@ banner_text_block(bool): show banner text block, default true
     <link rel="stylesheet" href="/static/theme.css?cb=1" />
   </head>
   <body>
+    {{ chunks.piwik() }}
     <!-- ADMIN MODE: {{ g.admin }} -->
     <div class="container">
 
