swap keyword and category search; closes openrightsgroup/blocked-org-uk#131

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -81,7 +81,7 @@
 
 {% macro main_menu() %}
 <a class="{{ 'active' if request.path == '/' else ''}}" href="/">Home</a>
-<a class="{{ 'active' if request.path.startswith( ('/blocked-sites','/site','/check','/unblock','/thanks')) else ''}}" href="/blocked-sites">Blocked Sites</a>
+<a class="{{ 'active' if request.path.startswith( ('/blocked-sites','/site','/check','/unblock','/thanks')) else ''}}" href="/sites">Blocked Sites</a>
 {{ menu_link("Reported Sites", '/reported-sites') }}
 {{ menu_link("Legal Blocks", '/legal-blocks') }}
 <br />
