--- a/BlockedFrontend/templates/site-search.html
+++ b/BlockedFrontend/templates/site-search.html
@@ -40,8 +40,8 @@ A great many websites are being blocked mistakenly as a result of government imp
 <div class="pagemenu col-md-4 col-md-offset-2">
 
 <div><a href="{{ url_for('.check', mode='live') }}">Check a specific website</a></div>
+<div><a href="{{ url_for('category.blocked_sites') }}">Search sites by category</a></div>
 <div><a href="{{ url_for('.random_category') }}">Browse a random category</a></div>
-<div><a href="{{ url_for('category.sites_search') }}">Search sites by keyword</a></div>
 
 </div>
 </div> <!-- /.row -->
