add onward actions if rechecking is not possible; openrightsgroup/blocked-org-uk#123

--- a/BlockedFrontend/templates/unblock2.html
+++ b/BlockedFrontend/templates/unblock2.html
@@ -38,11 +38,25 @@
 <p>All of the recorded blocks for this site are too old or have already been reported.</p>
 {% endfor %}
 {% if valid_blocks == 0 %}
-<p>The recorded blocks are too old for overblocking to be reported.  Please re-check the site.</p>
+  {% if request.method == 'POST' %}
+    <p>The recorded blocks are too old for unblocking to be requested.  Please re-check the site.</p>
+  {% else %}
+    <div>Unfortunately, we have not been able to re-check this site.  Please try again later.</div>
+    <div>In the meantime, you can:
+      <ul>
+        <li><a href="{{ url_for('category.check')}}">Check another site</a></li>
+        <li><a href="{{ url_for('category.random')}}">Check a random site</a></li>
+        <li><a href="{{ url_for('category.sites_search')}}">Search for sites by keyword</a></li>
+        <li><a href="{{ url_for('category.blocked_sites')}}">Search for sites by category</a></li>
+      </ul>
+    </div>
+  {% endif %}
 {% endif %}
+{% if not (valid_blocks == 0 and request.method == 'GET') %}
 <div style="text-align: right">
 <a class="btn btn-default" id="recheck">Re-check site</a>
 </div>
+{% endif %}
 
 {% if valid_blocks > 0 %}
 <h2>About the site</h2>
