display result status with styling; closes openrightsgroup/blocked-org-uk#147

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -159,6 +159,9 @@ margin-top: 2em;
 #allresults * td {
     background-color: #edffed;
     }
+#allresults tr.error td {
+    background-color: #ffffed;
+    }
 
 .showmore {
     text-align: right;
