add site counts to legal-blocks

--- a/BlockedFrontend/templates/cms/legal-blocks.html
+++ b/BlockedFrontend/templates/cms/legal-blocks.html
@@ -22,6 +22,7 @@
 <div class="col-md-12">
 
 <h2>Recent legally-blocked sites</h2>
+<h4>{{urlcount}} site{{'s' if urlcount != 1 else '' }} detected</h4>
 <table class="table table-striped">
     <tr>
         <th>URL</th>
