--- a/BlockedFrontend/templates/blocked-sites.html
+++ b/BlockedFrontend/templates/blocked-sites.html
@@ -1,6 +1,7 @@
 {% extends "BasicPage.page.html" %}
 {%import "results.part.html" as results %}
 {%import "remotecontent.part.html" as rmt %}
+{%import "paging.part.html" as paging %}
 
 {%set pagetitle = "Websites being blocked by UK Internet Service Providers" %}
 
@@ -48,7 +49,8 @@ A great many websites are being blocked mistakenly as a result of government imp
 
 {{ results.results_table(data) }}
 
-{{ results.paging('.blocked_sites', page=page, pagesize=20, count=data.total_blocked_url_count, category=category) }}
+{# results.paging('.blocked_sites', page=page, pagesize=20, count=data.total_blocked_url_count, category=category) #}
+{{ paging.page_list('.blocked_sites', page=page, pagecount=pagecount, pagesize=pagesize, category=category ) }}
 
 
 </div>
