--- a/BlockedFrontend/templates/cms/index.html
+++ b/BlockedFrontend/templates/cms/index.html
@@ -35,7 +35,7 @@
 
 <div class="well" style="text-align: center">
 <div  class="randomurl hidden-xs"><a href="{{site.url}}" target="_blank" rel="nofollow">{{site.url}}</a></div>
-<div  class="randomurl hidden-sm"><a href="{{site.url}}" target="_blank" title="{{ site.url }}" rel="nofollow">{{site.url|domain}}</a></div>
+<div  class="randomurl hidden-sm hidden-md hidden-lg"><a href="{{site.url}}" target="_blank" title="{{ site.url }}" rel="nofollow">{{site.url|domain}}</a></div>
 <p>{{site.title|null('no title')}}</p>
 is blocked for <strong>{{blockednetworks|join_en }}</strong> customers using filters.
 
