add send_updates checkbox; openrightsgroup/blocked-org-uk#153

--- a/BlockedFrontend/templates/unblock2.html
+++ b/BlockedFrontend/templates/unblock2.html
@@ -74,6 +74,15 @@
 <div class="form-group">
 <div class="checkbox">
   <label>
+    <input type="checkbox" value="1" name="allow_publish"/>
+    Allow Open Rights Group to publish your request
+  </label>
+</div>
+</div>
+
+<div class="form-group">
+<div class="checkbox">
+  <label>
     <input type="checkbox" value="1" name="checkedsite"/>
     I confirm that the site is not squatted, abandoned, a redirected URL or 
     unsuitable for under 18s.
@@ -84,7 +93,7 @@
 <div class="form-group">
 <div class="checkbox">
   <label>
-    <input type="checkbox" value="contact" name="contact" />
+    <input type="checkbox" value="send_updates" name="send_updates" />
     Please email me if the site is unblocked
   </label>
 </div>
