--- a/BlockedFrontend/templates/unblock2.html
+++ b/BlockedFrontend/templates/unblock2.html
@@ -74,8 +74,18 @@
 <div class="form-group">
 <div class="checkbox">
   <label>
-    <input type="checkbox" value="1" name="allow_publish"/>
-    Allow Open Rights Group to publish your request
+    <input type="checkbox" value="1" checked="checked" name="allow_publish"/>
+    Please publish my message / review
+  </label>
+</div>
+</div>
+
+
+<div class="form-group">
+<div class="checkbox">
+  <label>
+    <input type="checkbox" value="send_updates" name="send_updates" />
+    Please email me if the site is unblocked
   </label>
 </div>
 </div>
@@ -84,17 +94,8 @@
 <div class="checkbox">
   <label>
     <input type="checkbox" value="1" name="checkedsite"/>
-    I confirm that the site is not squatted, abandoned, a redirected URL or 
-    unsuitable for under 18s.
-  </label>
-</div>
-</div>
-
-<div class="form-group">
-<div class="checkbox">
-  <label>
-    <input type="checkbox" value="send_updates" name="send_updates" />
-    Please email me if the site is unblocked
+    <strong>I confirm that the site is not squatted, abandoned, a redirected URL or 
+    unsuitable for under 18s.</strong>
   </label>
 </div>
 </div>
